[gd_scene load_steps=26 format=3 uid="uid://clr7pxs83p3b4"]

[ext_resource type="Script" path="res://scripts/checkpoint.gd" id="1_prryk"]
[ext_resource type="Texture2D" uid="uid://bi6lwcikhprk7" path="res://assets/sprites/checkpoint.png" id="1_r0ivo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x44qx"]
size = Vector2(7, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gkjdv"]
size = Vector2(7, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w6gyd"]
size = Vector2(70, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8dg16"]
size = Vector2(68, 4)

[sub_resource type="Animation" id="Animation_b78bl"]
resource_name = "push"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -38), Vector2(0, -32)]
}

[sub_resource type="Animation" id="Animation_8xsd3"]
resource_name = "release"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -32), Vector2(0, -38)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_h0kji"]
resource_name = "spawn"
length = 2.0
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(2, 0.5, 1),
"update": 0,
"values": [Vector2(0, -38), Vector2(0, 38), Vector2(0, -32)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.71, 1.31),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawnPlayer"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jr4xl"]
_data = {
"push": SubResource("Animation_b78bl"),
"release": SubResource("Animation_8xsd3"),
"spawn": SubResource("Animation_h0kji")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_2vp35"]
atlas = ExtResource("1_r0ivo")
region = Rect2(81, 0, 28, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_yf2qr"]
atlas = ExtResource("1_r0ivo")
region = Rect2(81, 29, 28, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_yetql"]
atlas = ExtResource("1_r0ivo")
region = Rect2(81, 58, 28, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_rspd0"]
atlas = ExtResource("1_r0ivo")
region = Rect2(110, 0, 28, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_jodp8"]
atlas = ExtResource("1_r0ivo")
region = Rect2(110, 29, 28, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_lwwno"]
atlas = ExtResource("1_r0ivo")
region = Rect2(110, 58, 28, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_2e2yr"]
atlas = ExtResource("1_r0ivo")
region = Rect2(197, 0, 28, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_m57jk"]
atlas = ExtResource("1_r0ivo")
region = Rect2(197, 29, 28, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_76xb5"]
atlas = ExtResource("1_r0ivo")
region = Rect2(139, 0, 28, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqi0d"]
atlas = ExtResource("1_r0ivo")
region = Rect2(139, 29, 28, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvxjt"]
atlas = ExtResource("1_r0ivo")
region = Rect2(139, 58, 28, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwe4t"]
atlas = ExtResource("1_r0ivo")
region = Rect2(168, 0, 28, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_4g4mc"]
atlas = ExtResource("1_r0ivo")
region = Rect2(168, 29, 28, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ya7g"]
atlas = ExtResource("1_r0ivo")
region = Rect2(168, 58, 28, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_fd1gh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vp35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yf2qr")
}],
"loop": true,
"name": &"big",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yetql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rspd0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jodp8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwwno")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yetql")
}],
"loop": false,
"name": &"bigDistort",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2e2yr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m57jk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2e2yr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m57jk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2e2yr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m57jk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2e2yr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m57jk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2e2yr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m57jk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2e2yr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m57jk")
}],
"loop": false,
"name": &"noSignal",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_76xb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqi0d")
}],
"loop": true,
"name": &"small",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvxjt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwe4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4g4mc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ya7g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvxjt")
}],
"loop": false,
"name": &"smallDistort",
"speed": 20.0
}]

[node name="Checkpoint" type="StaticBody2D"]
z_index = 10
collision_mask = 2
script = ExtResource("1_prryk")
metadata/bigPlayer = false
metadata/checkpointNumber = 0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_r0ivo")
region_enabled = true
region_rect = Rect2(0, 45, 80, 64)

[node name="CollisionLeft" type="CollisionShape2D" parent="."]
position = Vector2(-36.5, 0)
shape = SubResource("RectangleShape2D_x44qx")

[node name="CollisionRight" type="CollisionShape2D" parent="."]
position = Vector2(36.5, 0)
shape = SubResource("RectangleShape2D_gkjdv")

[node name="PressurePlate" type="AnimatableBody2D" parent="."]
z_index = -1
position = Vector2(0, -32)
collision_mask = 2

[node name="Sprite2D" type="Sprite2D" parent="PressurePlate"]
texture = ExtResource("1_r0ivo")
region_enabled = true
region_rect = Rect2(5, 30, 70, 14)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PressurePlate"]
shape = SubResource("RectangleShape2D_w6gyd")

[node name="PlateTrigger" type="Area2D" parent="PressurePlate"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PressurePlate/PlateTrigger"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_8dg16")

[node name="AnimationPlayer" type="AnimationPlayer" parent="PressurePlate/PlateTrigger"]
libraries = {
"": SubResource("AnimationLibrary_jr4xl")
}
autoplay = "release"

[node name="Screen" type="AnimatedSprite2D" parent="."]
position = Vector2(-20, 0)
sprite_frames = SubResource("SpriteFrames_fd1gh")
animation = &"noSignal"
autoplay = "noSignal"
frame = 11
frame_progress = 1.0

[node name="DistortionTimer" type="Timer" parent="Screen"]

[node name="Number1" type="Sprite2D" parent="."]
position = Vector2(11, 0)
texture = ExtResource("1_r0ivo")
region_enabled = true
region_rect = Rect2(81, 87, 12, 22)

[node name="Number2" type="Sprite2D" parent="."]
position = Vector2(25, 0)
texture = ExtResource("1_r0ivo")
region_enabled = true
region_rect = Rect2(81, 87, 12, 22)

[connection signal="body_entered" from="PressurePlate/PlateTrigger" to="." method="_on_plate_trigger_body_entered"]
[connection signal="body_exited" from="PressurePlate/PlateTrigger" to="." method="_on_plate_trigger_body_exited"]
[connection signal="timeout" from="Screen/DistortionTimer" to="." method="_on_distortion_timer_timeout"]
